k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: foxmini-app
  labels:
    name: foxmini-app
